# bazis-statusy

./: README.md  pyproject.toml  pytest.ini
bazis/contrib/statusy/: __init__.py  admin.py  admin_abstract.py  apps.py  conf.py  models.py  models_abstract.py  router.py  routes.py  routes_abstract.py  schemas.py  services.py
bazis/contrib/statusy/locale/en/LC_MESSAGES/: django.po
bazis/contrib/statusy/locale/ru/LC_MESSAGES/: django.mo  django.po
bazis/contrib/statusy/migrations/: 0001_initial.py  0002_transit_hint_action_transit_hint_title.py  0003_rename_name_status_name_en_and_more.py  0004_status_name_ru_transit_hint_title_ru_transit_name_ru_and_more.py  0005_alter_status_name_en_alter_status_name_ru_and_more.py
sample/: project.env  pyproject.toml
sample/entity/: admin.py  models.py  routes.py  schemas.py
sample/entity/migrations/: 0001_initial.py  0002_initial.py  0003_parententity_autogen_author_selectors_and_more.py  0004_remove_parententity_autogen_author_selectors_and_more.py
sample/sample/: main.py
sample/users/: models.py
sample/users/migrations/: 0001_initial.py  0002_user_dt_first_login.py
tests/: conftest.py  factories.py  test_transit.py
