[project]
name = "sample"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bazis-statusy",
    "bazis-author>=2.2.0",
    "bazis-test-utils>=2.2.0",
]

[tool.uv.sources]
bazis-statusy = { path = "../", editable = true }

[tool.pytest.ini_options]
django_settings_module = "sample.settings"
